--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <footer>
-      Jakeliny Moura 2025
+      Todos os direitos reservados Jakeliny Moura 2025
     </footer>
   </div>
   <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
