Alterado o arquivo em PDF

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="https://github.com/jakelinykellyn" target="_blank">Ver meu Portifólio</a>
       </li>
       <li>
-        <a href="./assets/jakeliny-kellyn-feitosa-moura (1).pdf" target="_blank">Baixar o meu Currículo</a>
+        <a href="./arquivo.pdf" target="_blank">Baixar o meu Currículo</a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/jakeliny-kellyn/" target="_blank">Me siga no Linkedin</a>
