Alterado nomeclatura dos links

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <a href="https://github.com/jakelinykellyn" target="_blank">Ver meu Portifólio</a>
       </li>
       <li>
-        <a href="./arquivo.pdf" target="_blank">Baixar o meu Currículo</a>
+        <a href="./arquivo.pdf" target="_blank">Visualizar meu Currículo</a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/jakeliny-kellyn/" target="_blank">Me siga no Linkedin</a>
+        <a href="https://www.linkedin.com/in/jakeliny-kellyn/" target="_blank">Meu Perfil no Linkedin</a>
       </li>
       <li>
-        <a href="https://www.strava.com/athletes/7288669" target="_blank">Minhas Atividades</a>
+        <a href="https://www.strava.com/athletes/7288669" target="_blank">Minhas Atividades no Strava</a>
       </li>
     </ul>
     <div id="social-links">
