Foi alterado o menu Portifólio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <ul>
       <li>
-        <a href="https://github.com/jakelinykellyn" target="_blank">Ver meu Portifólio</a>
+        <a href="https://github.com/jakelinykellyn" target="_blank">Veja meu Portifólio</a>
       </li>
       <li>
         <a href="./arquivo.pdf" target="_blank">Visualizar meu Currículo</a>
