Alteração realizada nos menus

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="https://github.com/jakelinykellyn" target="_blank">Veja meu Portifólio</a>
       </li>
       <li>
-        <a href="./arquivo.pdf" target="_blank">Visualizar meu Currículo</a>
+        <a href="./arquivo.pdf" target="_blank">Visualize meu Currículo</a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/jakeliny-kellyn/" target="_blank">Meu Perfil no Linkedin</a>
