Atualizaçãao do Portifófio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <ul>
       <li>
-        <a href="https://github.com/jakelinykellyn" target="_blank">Veja meu Portifólio</a>
+        <a href="https://blossom-belly-0c2.notion.site/ebd/1d2eb7d5be81808f8d1ac928f963c124?v=1d2eb7d5be818008b984000c841806bc" width="100%" height="600" frameborder="0" allowfullscreen" target="_blank">Veja meu Portifólio</a>
       </li>
       <li>
         <a href="./arquivo.pdf" target="_blank">Visualize meu Currículo</a>
