atualização do Currículo adaptada para página do Notion

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="https://blossom-belly-0c2.notion.site/ebd/1d2eb7d5be81808f8d1ac928f963c124?v=1d2eb7d5be818008b984000c841806bc" width="100%" height="600" frameborder="0" allowfullscreen" target="_blank">Veja meu Portifólio</a>
       </li>
       <li>
-        <a href="./arquivo.pdf" target="_blank">Visualize meu Currículo</a>
+        <a href="https://www.notion.so/Jakeliny-Moura-1d5eb7d5be8180e8a15dd67dc28c3eab?pvs=4" target="_blank">Visualize meu Currículo</a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/jakeliny-kellyn/" target="_blank">Meu Perfil no Linkedin</a>
